--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,6 +32,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-react": "^7.22.0",
     "gh-pages": "^3.1.0"
   }
 }
