--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.1",
     "nodemon": "^2.0.6"
   }
 }
